fix overflow abd line width

--- a/src/component/section-about/style.module.css
+++ b/src/component/section-about/style.module.css
@@ -1,3 +1,3 @@
 .about_me {
-  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-width: 1px;
 }
