--- a/src/component/section-home/style.module.css
+++ b/src/component/section-home/style.module.css
@@ -4,7 +4,7 @@
 }
 
 .name {
-  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-width: 1px;
   letter-spacing: 3px;
 }
 
