--- a/src/component/section-skills/style.module.css
+++ b/src/component/section-skills/style.module.css
@@ -1,3 +1,3 @@
 .skills {
-  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-width: 1px;
 }
